--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Go"]
 	path = Go
 	url = https://github.com/Marcanta/AdventOfCodeGolang2022.git
+[submodule "Java"]
+	path = Java
+	url = https://github.com/Wawa27/AdventOfCodeJava2022
